# giant

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs  devenv.nix  flake.nix  giant.gen.yaml  giant.star  giant.yaml
.github/workflows/: ci.yml  deploy-docs.yml  nix-cache.yml  release.yml
crates/giant/: Cargo.toml  build.rs  giant.gen.yaml  giant.yaml
crates/giant-affected/: Cargo.toml  giant.gen.yaml
crates/giant-affected/src/: main.rs
crates/giant-affected/tests/: affected.rs
crates/giant-build/: Cargo.toml  giant.gen.yaml
crates/giant-build/src/: lib.rs  renderer.rs
crates/giant-clean/: Cargo.toml  giant.gen.yaml
crates/giant-clean/src/: main.rs
crates/giant-clean/tests/: clean.rs
crates/giant-explain/: Cargo.toml  giant.gen.yaml
crates/giant-explain/src/: main.rs
crates/giant-explain/tests/: explain.rs
crates/giant-gen/: Cargo.toml  giant.gen.yaml
crates/giant-gen/src/: check.rs  config.rs  link.rs  main.rs  run.rs
crates/giant-gen/src/link/: tests.rs
crates/giant-gen/src/star/: emit.rs  io.rs  json.rs  load.rs  mod.rs  source.rs  tests.rs  value.rs
crates/giant-gen/src/star/stdlib/: go.star
crates/giant-gen/tests/: integration.rs
crates/giant-graph/: Cargo.toml  giant.gen.yaml
crates/giant-graph/src/: main.rs  render.rs
crates/giant-graph/src/render/: tests.rs
crates/giant-logs/: Cargo.toml  giant.gen.yaml
crates/giant-logs/src/: main.rs
crates/giant-logs/tests/: logs.rs
crates/giant-protocol/: Cargo.toml
crates/giant-protocol/src/: client.rs  commands.rs  events.rs  lib.rs
crates/giant-sandbox/: Cargo.toml  giant.gen.yaml
crates/giant-sandbox/src/: main.rs  sandbox.rs
crates/giant-sandbox/tests/: enforcement.rs
crates/giant-schema/: Cargo.toml
crates/giant-schema/src/: lib.rs
crates/giant-task/: Cargo.toml  giant.gen.yaml  giant.yaml
crates/giant-task/src/: completions.rs  config.rs  deps.rs  main.rs  render.rs  runner.rs  schema.rs  services.rs  signals.rs  tty.rs  watch.rs  workspace.rs
crates/giant-task/tests/: completions.rs  run.rs
crates/giant-tui/: Cargo.toml  giant.gen.yaml  giant.yaml
crates/giant-tui/src/: colors.rs  keys.rs  lib.rs  main.rs  state.rs  ui.rs
crates/giant/src/: cache.rs  commands.rs  config.rs  discovery.rs  events.rs  executor.rs  explain.rs  fmt.rs  fsmonitor.rs  git.rs  graph.rs  lib.rs  main.rs  model.rs  paths.rs  remote.rs  renderer.rs  selection.rs  structural.rs  types.rs  watcher.rs  worktree.rs
crates/giant/src/cli/: affected.rs  build.rs  clean.rs  completions.rs  dynamic.rs  explain.rs  external.rs  graph.rs  logs.rs  mod.rs  prep.rs  session.rs  test.rs  verify.rs  watch.rs
crates/giant/src/executor/: key.rs  run.rs  sandbox.rs
crates/giant/src/remote/: gha.rs  mod.rs
crates/giant/tests/: build_smoke.rs  external_dispatch.rs  perf.rs  remote_cache.rs  sandbox_build.rs  session_reload.rs
crates/giant/tests/fixtures/discover-docker/: giant.yaml
crates/giant/tests/fixtures/discover-docker/tools/: discover-docker.sh
crates/giant/tests/fixtures/discover-go/: .gitignore  giant.yaml  main.go
crates/giant/tests/fixtures/discover-go/tools/: discover-go.sh
docs/: ARCHITECTURE.md
docs-site/: README.md  astro.config.mjs  giant.yaml  package-lock.json
docs-site/public/: install.sh
docs-site/src/content/docs/: compare.md  index.mdx
docs-site/src/content/docs/concepts/: cache-key.md  discovery.md  packages.md  selection.md  structural-inputs.md  targets.md
docs-site/src/content/docs/extending/: architecture.md  giant-task.md  giant-tui.md  porcelains.md
docs-site/src/content/docs/guides/: ci.md  controlling-giant.md  docker.md  generating-config.md  go-monorepo.md  remote-cache.md  tests.md  toolchains.md  watch.md
docs-site/src/content/docs/reference/: cache-layout.md  cli.md  config.md  events.md  starlark.md
docs-site/src/content/docs/start/: first-build.md  install.md  quickstart.md
docs-site/src/styles/: landing.css
docs/adr/: 0000-template.md  0003-headless-engine-and-event-protocol.md  0006-no-bazel-reapi.md  0007-yaml-as-sugar-json-internal.md  0010-tasks-live-in-porcelain.md  0024-static-target-config-generated-offline.md  0029-embedded-starlark-generator-host.md  0030-opt-in-sandboxing.md  0032-dep-inference-moves-to-generation.md  0034-core-shrinks-to-session-and-completions.md  0036-verify-runs-in-a-disposable-worktree.md
output/release/x86_64-unknown-linux-musl/: giant-sandbox
src/: cache.rs  config.rs  discovery.rs  events.rs  executor.rs  git.rs  graph.rs  lib.rs  main.rs  model.rs  paths.rs  remote.rs  renderer.rs  selection.rs  structural.rs  types.rs  watcher.rs
src/cli/: affected.rs  build.rs  clean.rs  dynamic.rs  explain.rs  external.rs  graph.rs  mod.rs  prep.rs  watch.rs
std/: cargo.star  go.star
tests/: build_smoke.rs  completions.rs  remote_cache.rs
tests/fixtures/discover-docker/: .gitignore  giant.yaml
tests/fixtures/discover-go/: go.mod
tests/fixtures/discover-go/pkg/util/: util.go
tests/fixtures/discover-go/tools/: discover-go.sh
tools/: discover-toolchains.sh
