[workspace]
resolver = "2"
members = ["crates/*"]
metadata.crane.name = "giant"

[workspace.package]
version = "0.1.12"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/giantdotbuild/giant"
homepage = "https://giant.build"
readme = "README.md"
rust-version = "1.95"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
