[package]
name = "giant-affected"
version = "0.1.0"
edition = "2024"

[dependencies]
# The engine as a library (ADR-0034): workspace load + selection + git. No
# protocol, no subprocess - a one-shot read links the lib directly.
giant = { path = "../giant" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
