[package]
name = "giant-affected"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "List targets affected by changes since a git base. Dispatched via `giant affected`."

[dependencies]
# The engine as a library: workspace load + selection + git. No
# protocol, no subprocess - a one-shot read links the lib directly.
giant = { path = "../giant" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
