[package]
name = "giant-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Build / test / verify porcelains: run targets through the engine and render progress. Dispatched via `giant build`, `giant test`, `giant verify`."

[[bin]]
name = "giant-build"
path = "src/bin/giant-build.rs"

[[bin]]
name = "giant-test"
path = "src/bin/giant-test.rs"

[[bin]]
name = "giant-verify"
path = "src/bin/giant-verify.rs"

[dependencies]
# Links the engine: build / test / verify run targets in-process via the
# engine's build adapter and render the event stream.
giant = { path = "../giant" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time"] }
anstyle = "1"
serde_json = "1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
