[package]
name = "giant-clean"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Clear the local Giant cache. Dispatched via `giant clean`."

[dependencies]
# Reads only cache.dir from the config + scans the cache dir; no graph, no
# engine run. Links the giant lib for config load + cache-dir resolve.
giant = { path = "../giant" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
glob = "0.3"
walkdir = "2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
