[package]
name = "giant-explain"
version = "0.1.0"
edition = "2024"
description = "Show what feeds a target's cache key. Dispatched via `giant explain`."

[dependencies]
# Engine: for the Command / Event protocol types and the session-query client
# only. explain talks to a `giant session` subprocess; it does not recompute
# anything itself (ADR-0034).
giant = { path = "../giant" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
