[package]
name = "giant-explain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Show what feeds a target's cache key. Dispatched via `giant explain`."

[dependencies]
# The wire protocol + session client only - not the engine. explain
# talks to a `giant session` subprocess; it does not recompute anything itself.
giant-protocol = { path = "../giant-protocol" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
