[package]
name = "giant-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Generator runner porcelain for Giant - dispatched via `giant gen`"

[[bin]]
name = "giant-gen"
path = "src/main.rs"

[dependencies]
# The giant engine, used as a library only for the workspace-root walk and
# config-root parse (Config::load_root). The runner never touches the
# executor/cache - it runs generator commands and diffs their files.
giant = { path = "../giant" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
clap = { version = "4", features = ["derive"] }

# Embedded Starlark host for the built-in generator. The
# whole point of the porcelain's programmable path; single static binary, no
# runtime to provision. allocative is required by the StarlarkValue derives.
starlark = "0.14"
allocative = "0.3"

# The shared wire schema: target() builds and emits a WireTarget.
giant-schema = { path = "../giant-schema" }

# The runner's own narrow schema for giant-gen.yaml (just `generators:`).
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"

# gitignore-aware walk to enumerate committed giant.<name>.yaml files.
ignore = "0.4"
# glob matching for the host's ws.glob primitive.
glob = "0.3"

anyhow = "1"

[dev-dependencies]
tempfile = "3"
