[package]
name = "giant-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Print the Giant dependency graph as JSON. Dispatched via `giant graph`."

[dependencies]
# The engine as a library, for config scan + graph construction only. The
# graph is fully static on disk, so this porcelain needs no engine
# execution, cache, or protocol - just the loader and BuildGraph.
giant = { path = "../giant" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
