[package]
name = "giant-logs"
version = "0.1.0"
edition = "2024"
description = "Replay a target's captured logs. Dispatched via `giant logs`."

[dependencies]
# The wire protocol + session client only - not the engine (ADR-0034). logs talks
# to a `giant session` subprocess (`logs.get`); it does not read the cache itself.
giant-protocol = { path = "../giant-protocol" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
