[package]
name = "giant-logs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Replay a target's captured logs. Dispatched via `giant logs`."

[dependencies]
# The wire protocol + session client only - not the engine. logs talks
# to a `giant session` subprocess (`logs.get`); it does not read the cache itself.
giant-protocol = { path = "../giant-protocol" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
