[package]
name = "giant-protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Giant's NDJSON wire protocol (Command/Event/TargetId) and a reference session client"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync"] }
