[package]
name = "giant-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "The giant.yaml wire schema: the typed config contract shared by the engine and its generators"

[dependencies]
serde = { version = "1", features = ["derive"] }
glob = "0.3"

[dev-dependencies]
serde_yaml_ng = "0.10"
serde_json = "1"
