[package]
name = "giant-task"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Task runner porcelain for Giant - dispatched via `giant task <name>`"

[[bin]]
name = "giant-task"
path = "src/main.rs"

[dependencies]
# The giant engine, used as a Rust library for the parts we don't want
# to re-implement: config loading + workspace-root walk + path types.
# We do NOT touch internals (executor, cache, etc.) - builds happen via
# `giant build` subprocess, the documented porcelain contract (ADR-0010).
giant = { path = "../giant" }

# Async runtime - Command::status is fine sync, but we use tokio so we
# can stream subprocess stdout/stderr without blocking.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "signal", "time", "sync"] }
tokio-util = "0.7"
tokio-process-tools = "0.6"
futures-util = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
clap_complete_nushell = "4"

# Schema for tasks: lives in this crate, NOT in giant core. We re-parse
# giant.yaml with our own narrow schema.
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

# Errors
anyhow = "1"
thiserror = "2"

# Watch mode: glob matching for task `inputs:` patterns.
glob = "0.3"
tracing = "0.1"

# Colored verbs in giant-task's output - keep the look consistent with
# the giant build renderer. anstyle is in the workspace tree via clap.
anstyle = "1"

# Shebang task bodies are written to a temp file and exec'd directly.
tempfile = "3"

[dev-dependencies]
tempfile = "3"
libc = "0.2"
